crates/parser/src/tests/snapshots/array_index_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 294
expression: "(test[1], ast, ast_string)"
---
- "x[0]"
- Ok:
    nodes:
      - Expr:
          Index:
            binding:
              Expr:
                Ident:
                  name: x
            idx:
              Expr:
                Lit:
                  value:
                    UInt64: 0
- "x[0]"

