crates/parser/src/tests/snapshots/array_index_bad_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 285
expression: "(test[1], ast, ast_string)"
---
- "x["
- Err:
    message: Premature end of expression
    line: 0
    column: 0
- "Parsing error: Premature end of expression"

