crates/parser/src/tests/snapshots/array_index_bad_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 294
expression: "(test[1], ast, ast_string)"
---
- "x[0"
- Err:
    message: "Expecting `]` after expression in array index. Got `EOF`"
    line: 0
    column: 0
- "Expecting `]` after expression in array index. Got `EOF`"

