crates/parser/src/tests/snapshots/array_type_bad_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 290
expression: "(test[1], ast, ast_string)"
---
- "let x: [int;"
- Err:
    message: Premature end of expression
    line: 0
    column: 0
- "Parsing error: Premature end of expression"

