crates/parser/src/tests/snapshots/array_type_bad_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 294
expression: "(test[1], ast, ast_string)"
---
- "let x: [int]"
- Err:
    message: "Expecting semicolon after `int` in `let` type annotation. Got `CloseBracket`"
    line: 1
    column: 12
- "Expecting semicolon after `int` in `let` type annotation. Got `CloseBracket` at 1:12"

