crates/parser/src/tests/snapshots/array_type_bad_4.snap
---
source: crates/parser/src/tests.rs
assertion_line: 294
expression: "(test[1], ast, ast_string)"
---
- "let x: ["
- Err:
    message: "Expecting type after `[` in `let` type annotation. Got `EOF`"
    line: 0
    column: 0
- "Expecting type after `[` in `let` type annotation. Got `EOF`"

