crates/parser/src/tests/snapshots/binop_bad_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 46
expression: "(test[1], ast, ast_string)"
---
- 20 - else
- Err:
    message: "Expecting primary expression. Got `Else`"
    line: 1
    column: 6
- "Parsing error: Expecting primary expression. Got `Else` at 1:6"

